--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "http-status": "^1.5.3",
+    "mongose": "^0.0.2-security",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
